@@ -1,6 +1,8 @@
 2007-11-21: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Signer.pm: provide documentation for Key parameter
  * lib/Mail/DKIM/PrivateKey.pm: created documentation for this package
+ * lib/Mail/DKIM/Signature.pm: implement Key parameter for constructor,
+   and key() method to get/set the private key
 
 2007-11-14: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Verifier.pm: for DomainKeys signatures, use the message
